//
// Copyright 2024-2025 The Chainloop Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package controlplane.v1;

import "buf/validate/validate.proto";
import "controlplane/v1/response_messages.proto";
import "controlplane/v1/shared_message.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/chainloop-dev/chainloop/app/controlplane/api/controlplane/v1;v1";

service APITokenService {
  rpc Create(APITokenServiceCreateRequest) returns (APITokenServiceCreateResponse);
  rpc List(APITokenServiceListRequest) returns (APITokenServiceListResponse);
  rpc Revoke(APITokenServiceRevokeRequest) returns (APITokenServiceRevokeResponse);
}

message APITokenServiceCreateRequest {
  string name = 3 [(buf.validate.field).string.min_len = 1];

  optional string description = 1;
  // You might need to specify a project reference if you want/need to create a token scoped to a project
  IdentityReference project_reference = 4;
  optional google.protobuf.Duration expires_in = 2;
}

message APITokenServiceCreateResponse {
  APITokenFull result = 1;

  message APITokenFull {
    APITokenItem item = 1;
    string jwt = 2;
  }
}

message APITokenServiceRevokeRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message APITokenServiceRevokeResponse {}

message APITokenServiceListRequest {
  bool include_revoked = 1;

  // optional project reference to filter by
  IdentityReference project = 4;
}

message APITokenServiceListResponse {
  repeated APITokenItem result = 1;
}
